[package]
name = "pixelspray"
version = "0.3.0"
authors = ["xentec <xentec@aix0.eu>"]
edition = "2018"

[dependencies]
futures = "^0.3"
tokio = { version = "^0.2", features = [ "io-util", "rt-threaded", "signal", "stream", "tcp" ] }
tokio-util = { version = "^0.2", features = ["codec"]}
image = { version = "0.23.0-preview.0", default-features = false, features = [ "jpeg", "png", "png_codec", "webp" ] }

clap = "2"
structopt = "0.3"

rand = "0.7"
chrono = "0.4"
log = { version = "^0.4", features = ["release_max_level_info"] }
env_logger = { version = "^0.7", default-features = false, features = ["termcolor","atty","humantime"] }

[profile.release]
lto = true
debug = 1
