[package]
name = "pixelspray"
version = "0.4.0"
authors = ["xentec <xentec@aix0.eu>"]
edition = "2018"

[dependencies]
futures = "^0.3"
tokio = { version = "^1.29", features = [ "rt-multi-thread", "io-util", "signal", "sync", "net" ] }
tokio-util = { version = "^0.7", features = ["codec"] }
image = { version = "^0.24", default-features = false, features = [ "jpeg", "png", "webp" ] }
clap = { version = "^4.4", default-features = false, features = ["std", "derive", "cargo", "error-context", "help"] }

rand = "^0.8"
chrono = "^0.4"
anyhow = "1.0.77"

tracing = { version = "^0.1", features = ["log", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[profile.release]
lto = "thin"
debug = 1
